--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coursera is Cool!</title>
 </head>
 <body>
-    Hello World
+    <div>Hello World!<span> wHAT?</span></div>
+    <span>thIS IS </span>
+    <span>HELLO</span>
 </body>
 </html>
-
