--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,52 @@
     <title>Coursera is Cool!</title>
 </head>
 <body>
-    <div>Hello World!<span> wHAT?</span></div>
-    <span>thIS IS </span>
-    <span>HELLO</span>
+    <header>Contains Header information</header>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <section>
+        <article>
+            Article
+        </article>
+    </section>
+    <nav>usually for navigation</nav>
+    <div>Use div to section into blocks</div>
+    <div>
+        Unordered list:
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2 List:
+                <ul>
+                    <li>List 2 Item 1</li>
+                    <li>List 2 Item 2</li>
+                </ul>
+            </li>
+            <li>Item 3</li>
+        </ul>
+    </div>
+    <div>
+        Ordered list:
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2 List:
+                <ul>
+                    <li>List 2 Item 1</li>
+                    <li>List 2 Item 2</li>
+                </ul>
+            </li>
+            <li>Item 3</li>
+        </ol>
+    </div>
+    <div>
+        This is the way to interpret:
+        &lt; &gt; &amp; &copy;
+    </div>
+    <div>To create non breaking space and wrapping do&nbsp;it&nbsp;this&nbsp;way</div>
+    <div>&quot;Universal Quotes&quot;</div>
+
+    <a href="link.html" title="Title of a-tag">Link to other local .html</a>
+    <a href="link.html" title="Title of a-tag"><div>Or use a DIV</div></a>
+    <a href="www.google.com" target="_blank" title="Website">Link to website</a>
+    
 </body>
 </html>
