--- a/site/index.html
+++ b/site/index.html
@@ -52,6 +52,9 @@
     <a href="link.html" title="Title of a-tag">Link to other local .html</a>
     <a href="link.html" title="Title of a-tag"><div>Or use a DIV</div></a>
     <a href="www.google.com" target="_blank" title="Website">Link to website</a>
-    
+
+    <div><img src="" title="Image"></div>
+
+
 </body>
 </html>
